[gd_scene load_steps=52 format=3 uid="uid://pfofb1onq1b6"]

[ext_resource type="Script" uid="uid://bq2bc3otq6inr" path="res://scenes/fps_test_player.gd" id="1_fps_player"]
[ext_resource type="Script" uid="uid://ddprtht2qo7se" path="res://addons/inventory_system/core/inventory_component.gd" id="2_inv_comp"]
[ext_resource type="Script" uid="uid://bgudcqpbogui8" path="res://addons/inventory_system/core/equipment_component.gd" id="3_equip_comp"]
[ext_resource type="Script" uid="uid://cw07au03k3mfg" path="res://addons/inventory_system/core/inventory.gd" id="4_inv"]
[ext_resource type="Script" uid="uid://dqg7l1xgdnk4k" path="res://addons/inventory_system/core/inventory_slot.gd" id="5_slot"]
[ext_resource type="Script" uid="uid://bk3tb8xab2ytn" path="res://addons/player_control_fps/core/player_controller_3d.gd" id="6_controller"]
[ext_resource type="Script" uid="uid://cbq0osrr5prct" path="res://addons/inventory_system/core/item_category.gd" id="7_ghh2v"]
[ext_resource type="Script" uid="uid://bil1fg61l8orm" path="res://addons/player_control_fps/core/player_input_router_3d.gd" id="7_input"]
[ext_resource type="Script" uid="uid://bmpixfo6pgo1u" path="res://addons/player_control_fps/core/player_motor_3d.gd" id="8_motor"]
[ext_resource type="Script" uid="uid://0b6846c0kky3" path="res://addons/player_control_fps/core/player_look_controller_3d.gd" id="9_look"]
[ext_resource type="PackedScene" uid="uid://c4ciyr75aow6p" path="res://addons/inventory_system/ui/inventory_ui.tscn" id="10_inv_ui"]
[ext_resource type="PackedScene" path="res://addons/inventory_system/ui/quick_inventory_ui.tscn" id="11_quick_inv"]
[ext_resource type="PackedScene" path="res://addons/inventory_system/ui/item_tooltip_ui.tscn" id="12_tooltip"]
[ext_resource type="Script" uid="uid://b7qhwhcj7pgjr" path="res://addons/inventory_system/ui/tooltip_controller.gd" id="13_tooltip_ctrl"]
[ext_resource type="Script" uid="uid://bxuwiwu17py1y" path="res://addons/inventory_system/core/inventory_interaction_handler.gd" id="14_handler"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_player"]
radius = 0.4
height = 1.8

[sub_resource type="Resource" id="Slot_1"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_2"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_3"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_4"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_5"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_6"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_7"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_8"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_9"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_10"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_11"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_12"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_13"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_14"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_15"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_16"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_17"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_18"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_19"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="Slot_20"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="MainInventory"]
script = ExtResource("4_inv")
slots = Array[ExtResource("5_slot")]([SubResource("Slot_1"), SubResource("Slot_2"), SubResource("Slot_3"), SubResource("Slot_4"), SubResource("Slot_5"), SubResource("Slot_6"), SubResource("Slot_7"), SubResource("Slot_8"), SubResource("Slot_9"), SubResource("Slot_10"), SubResource("Slot_11"), SubResource("Slot_12"), SubResource("Slot_13"), SubResource("Slot_14"), SubResource("Slot_15"), SubResource("Slot_16"), SubResource("Slot_17"), SubResource("Slot_18"), SubResource("Slot_19"), SubResource("Slot_20")])

[sub_resource type="Resource" id="HotbarSlot_1"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="HotbarSlot_2"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="HotbarSlot_3"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="HotbarSlot_4"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="HotbarSlot_5"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="HotbarSlot_6"]
script = ExtResource("5_slot")

[sub_resource type="Resource" id="HotbarInventory"]
script = ExtResource("4_inv")
slots = Array[ExtResource("5_slot")]([SubResource("HotbarSlot_1"), SubResource("HotbarSlot_2"), SubResource("HotbarSlot_3"), SubResource("HotbarSlot_4"), SubResource("HotbarSlot_5"), SubResource("HotbarSlot_6")])
size = 6

[sub_resource type="BoxMesh" id="BoxMesh_floor"]
size = Vector3(20, 0.5, 20)

[sub_resource type="StandardMaterial3D" id="FloorMaterial"]
albedo_color = Color(0.4, 0.4, 0.4, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_floor"]
size = Vector3(20, 0.5, 20)

[sub_resource type="BoxMesh" id="BoxMesh_crate"]

[sub_resource type="StandardMaterial3D" id="CrateMaterial"]
albedo_color = Color(0.6, 0.4, 0.2, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_crate"]

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.3, 0.5, 0.7, 1)
ambient_light_source = 2
ambient_light_color = Color(0.6, 0.6, 0.6, 1)

[node name="FPSTestScene" type="Node3D"]

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.2865567, 0)
script = ExtResource("1_fps_player")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_player")

[node name="PitchPivot" type="Node3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)

[node name="Camera3D" type="Camera3D" parent="Player/PitchPivot"]

[node name="PlayerController3D" type="Node" parent="Player" node_paths=PackedStringArray("body", "pitch_pivot", "camera", "input_router", "motor", "look_controller")]
script = ExtResource("6_controller")
body = NodePath("..")
pitch_pivot = NodePath("../PitchPivot")
camera = NodePath("../PitchPivot/Camera3D")
input_router = NodePath("../PlayerInputRouter3D")
motor = NodePath("../PlayerMotor3D")
look_controller = NodePath("../PlayerLookController3D")

[node name="PlayerInputRouter3D" type="Node" parent="Player"]
script = ExtResource("7_input")

[node name="PlayerMotor3D" type="Node" parent="Player" node_paths=PackedStringArray("body", "input_router")]
script = ExtResource("8_motor")
body = NodePath("..")
input_router = NodePath("../PlayerInputRouter3D")

[node name="PlayerLookController3D" type="Node" parent="Player" node_paths=PackedStringArray("yaw_node", "pitch_node", "input_router")]
script = ExtResource("9_look")
yaw_node = NodePath("..")
pitch_node = NodePath("../PitchPivot")
input_router = NodePath("../PlayerInputRouter3D")

[node name="InventoryComponent" type="Node" parent="Player"]
script = ExtResource("2_inv_comp")
main_inventory = SubResource("MainInventory")
hotbar_inventory = SubResource("HotbarInventory")

[node name="EquipmentComponent" type="Node" parent="Player"]
script = ExtResource("3_equip_comp")
equipment_slots = {
"Chest": null,
"Feet": null,
"Hands": null,
"Head": null,
"Legs": null,
"MainHand": null,
"Neck": null,
"OffHand": null,
"Ring1": null,
"Ring2": null,
"Shoulders": null,
"Waist": null
}
defined_slots = Array[String](["Head", "Neck", "Shoulders", "Chest", "Hands", "MainHand", "Waist", "Legs", "OffHand", "Ring1", "Feet", "Ring2"])

[node name="InventoryInteractionHandler" type="Node" parent="Player"]
script = ExtResource("14_handler")

[node name="CanvasLayer" type="CanvasLayer" parent="Player"]

[node name="InventoryUI" parent="Player/CanvasLayer" node_paths=PackedStringArray("tooltip_controller", "equipment_component", "inventory_component", "interaction_handler") instance=ExtResource("10_inv_ui")]
tooltip_controller = NodePath("../TooltipController")
equipment_component = NodePath("../../EquipmentComponent")
inventory_component = NodePath("../../InventoryComponent")
interaction_handler = NodePath("../../InventoryInteractionHandler")

[node name="QuickInventoryUI" parent="Player/CanvasLayer" node_paths=PackedStringArray("tooltip_controller", "inventory_component", "interaction_handler") instance=ExtResource("11_quick_inv")]
tooltip_controller = NodePath("../TooltipController")
inventory_component = NodePath("../../InventoryComponent")
interaction_handler = NodePath("../../InventoryInteractionHandler")

[node name="Instructions" type="Label" parent="Player/CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
grow_horizontal = 2
grow_vertical = 0
text = "Press I or ESC to toggle inventory
WASD to move, Space to jump"
horizontal_alignment = 1

[node name="ItemTooltipUI" parent="Player/CanvasLayer" instance=ExtResource("12_tooltip")]

[node name="TooltipController" type="Node" parent="Player/CanvasLayer" node_paths=PackedStringArray("tooltip_ui")]
script = ExtResource("13_tooltip_ctrl")
tooltip_ui = NodePath("../ItemTooltipUI")

[node name="HUD" type="Label" parent="Player/CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 40.0
grow_horizontal = 2
text = "FPS Player Control Test
Press I to open inventory"
horizontal_alignment = 1

[node name="Crosshair" type="CenterContainer" parent="Player/CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Cross" type="Label" parent="Player/CanvasLayer/Crosshair"]
layout_mode = 2
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Environment" type="Node3D" parent="."]

[node name="Floor" type="StaticBody3D" parent="Environment"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Floor"]
mesh = SubResource("BoxMesh_floor")
surface_material_override/0 = SubResource("FloorMaterial")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Floor"]
shape = SubResource("BoxShape3D_floor")

[node name="Crate1" type="StaticBody3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0.75, -3)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Crate1"]
mesh = SubResource("BoxMesh_crate")
surface_material_override/0 = SubResource("CrateMaterial")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Crate1"]
shape = SubResource("BoxShape3D_crate")

[node name="Crate2" type="StaticBody3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0.75, -5)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Crate2"]
mesh = SubResource("BoxMesh_crate")
surface_material_override/0 = SubResource("CrateMaterial")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Crate2"]
shape = SubResource("BoxShape3D_crate")

[node name="Crate3" type="StaticBody3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1.75, -5)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Crate3"]
mesh = SubResource("BoxMesh_crate")
surface_material_override/0 = SubResource("CrateMaterial")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Crate3"]
shape = SubResource("BoxShape3D_crate")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(0.866025, -0.353553, 0.353553, 0, 0.707107, 0.707107, -0.5, -0.612372, 0.612372, 0, 10, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_1")
